# zjf-desktop

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.github/workflows/: tag-release.yml
docs/: .development-tasks.md.swp  development-tasks.md  internal-build.md  manual-acceptance.md  requirements.md  technical-architecture.md
prototype/: index.html
public/: .favicon.svg.swp
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: albums.rs  auth.rs  clipboard.rs  images.rs  mod.rs  settings.rs  uploads.rs
src-tauri/src/models/: album.rs  error.rs  image.rs  mod.rs  settings.rs  upload.rs
src-tauri/src/services/: file_service.rs  logging.rs  mod.rs  settings_store.rs  token_store.rs  zjf_api.rs
src/api/: desktop-commands.ts
src/app/: App.tsx  routes.tsx
src/components/app-shell/: AppShell.tsx
src/components/dropzone/: Dropzone.tsx
src/components/error-state/: ErrorState.tsx
src/components/private-image/: index.ts  (+1 more)
src/stores/: app-settings-store.ts  upload-queue-store.test.ts  upload-queue-store.ts
src/types/: .error.ts.swp  album.ts  auth.ts  error.ts  image.ts  settings.ts  upload.ts
src/utils/: auto-copy-upload.test.ts  auto-copy-upload.ts  filter-images.test.ts  filter-images.ts  format-image-link.test.ts  format-image-link.ts  mask-token.test.ts  mask-token.ts  process-upload-image.ts  safe-logger.test.ts  safe-logger.ts  user-error.test.ts  user-error.ts
(+10 files in other folders)
