[package]
name = "zjf-desktop"
version = "1.1.0"
description = "ZJF Desktop image management client"
authors = ["ZJF Desktop Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.6.1"
keyring = "4.0.1"
keyring-core = "1.0.0"
open = "5.3.5"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
